mr.tiskin.furie

--- a/lekcii/algorythmes.tex
+++ b/lekcii/algorythmes.tex
@@ -13,6 +13,9 @@
 \usepackage{euscript}
 \usepackage{mathrsfs}
 \usepackage{geometry}
+\usepackage{graphicx}
+\graphicspath{{pictures/}}
+\DeclareGraphicsExtensions{.pdf,.png,.jpg}
 \usepackage[usenames]{color}
 \hypersetup{
      colorlinks=true,
@@ -850,5 +853,153 @@
 \begin{stat}
     Обратное к BWT преобразование можно вычислить за линейное время.
 \end{stat}
+
+\newpage
+
+\begin{center}
+\includegraphics{tiskin}
+
+Торжественно начинается часть конспекта, основанная на лекциях \ 
+
+доцента ФМКН СПБГУ, кандидата физико-математических наук \ 
+
+Александра Владимировича ТИСКИНА 
+\end{center}
+
+\section{Преобразование Фурье.}
+
+\subsection{Введение в преобразование Фурье.}
+
+\begin{alg}
+    \textbf{Дискретное проеобразование Фурье степени $n$ (DFT$_n$)} - $F_{n, \omega}\cdot a = b$, где $n$ - обратим в $R$, коммутативном кольц без делителей нуля, $\omega$ - первообразный корень $\sqrt[n]{1}$, $a=[a_0, \ldots, a_{n-1}]^T\in R^n$, $b=[b_0, \ldots, b_{n-1}]^T\in R^n$, а $F_n, \omega$ - матрица
+    
+    \begin{equation*}
+        [\omega^{ij}]_{i, j=0}^{n-1}=
+        \begin{vmatrix}
+            1 & 1 & 1 & \dots & 1 \\
+            1 & \omega & \omega^2 & \dots & \omega^{n-1} \\
+            1 & \omega^2 & \omega^4 & \dots & \omega^{n-2} \\
+            \vdots & \vdots & \vdots & \ddots & \vdots \\
+            1 & \omega^{n-1} & \omega^{n-2} & \dots & \omega 
+        \end{vmatrix}
+    \end{equation*}
+
+    Трудоёмкость: наивный алгоритм, время - $O(n^2)$. 
+\end{alg} \
+
+\begin{alg}
+    \textbf{Обратное DFT}. $\frac{1}{n}F_{n, \omega^{-1}}\cdot b = a$.
+\end{alg}
+
+\begin{remark}
+    Используется для \textit{вычисления значений} полинома $a(x)=a_0+a_1x+\ldots+a_{n-1}x^{n-1}$ на $C=\{1, \omega, \ldots, \omega^{n-1}\}$. Аналогично для \textit{интерполяции} полинома $a(x)$ по значениям на $С$ - $\frac{1}{n}F_{n, \omega^{-1}}\cdot a$. \ 
+
+    $\frac{1}{\sqrt{n}}F_{n, \omega^{-1}}\cdot a$ - разложение $a$ по \textit{базису Фурье} (строкам $\frac{1}{\sqrt{n}}F_{n, \omega}$). 
+\end{remark}
+
+\subsection{Быстрое преобразование Фурье.}
+
+\begin{alg}
+    \textbf{Бвстрое преобразование Фурье (FFT)}. Общая идея: исользовать разложение $n$ на множители и структцтц множества корней из единицы для ускорения вычислений. То есть, пусть $n=n'n''$, $1<n'\leq n'' < n$. В алгоритме FFT 
+
+    \begin{itemize}
+        \item вектор $a$ записывается в виде $n'\times n''$-матрицы по строкам; 
+        \item вектор $b$ записывается в виде $n''\times n'$-матрицы по строкам; 
+        \item DFT$_n$ выражается в виде DFT$_{n'}$, DFT$_{n''}$ над столбцами матриц; 
+        \item DFT$_{n'}$, DFT$_{n''}$ вычисляются рекурсивно. 
+    \end{itemize}
+\end{alg} \
+
+\begin{alg}
+    Некоторые классические варианты: $n=\frac{n}{2}\cdot 2$ - \textbf{FFT с прореживанием по времени} (FFT-DIT), и $n=2\cdot \frac{n}{2}$ - \textbf{FFT с прореживанием по частоте} (FFT-DIF). 
+\end{alg} \ 
+
+\begin{alg}
+    Наиболее общий слуяай - \textbf{шастиэтапное FFT}. Пусть $n=n'n''$, запишем матрицы в таком виде:
+
+    \begin{equation*}
+        A=
+        \begin{vmatrix}
+            a_0 & a_1 & \dots & a_{n''-1} \\
+            a_{n''} & a_{n''+1} & \dots & a_{2n''-1} \\
+            \vdots & \vdots & \ddots & \vdots \\
+            a_{n-n''} & a_{n-n''+1} & \dots & a_{n-1} 
+        \end{vmatrix}, 
+    \end{equation*}
+
+    и аналогично $B$. Тогда получим, что $B=F_{n'', \omega^{n'}}\cdot (G_{n', n'', \omega}\circ (F_{n', \omega^{n''}}\cdot A))^T$, где $G_{n', n'', \omega}=[\omega^{tv}]_{t, v}: n'\times n''$ - матрица \textit{поворотных множителей}, а оператор $\circ$ - \textit{умножение Адамара} (поэлементное умножение матриц). \ 
+
+    И, действительно, данная схема почти шестиэтапная:
+
+    \begin{itemize}
+        \item вектор $a$ записывается в матрицу по строкам; 
+        \item $n''$ независимых DFT$_{n'}$ над столбцами, вычисляются рекурсивно; 
+        \item транспозиция; применение поворотных множителей (2 этапа); 
+        \item $n'$ назависимых DFT$_{n''}$ над столбцами, вычисляются рекурсивно; 
+        \item вектор $b$ считывается из матрицы по строкам.
+    \end{itemize}
+\end{alg}
+
+\begin{remark}
+    Трудоёмкость FFT-DIT - $O(n \log n)$, трудоёмкость симметричного FFT ($n'=n''$) - $O(n \log n)$. 
+\end{remark}
+
+\begin{remark}
+    Если вам интересен \textit{граф-бабочка} и схемы FFT, то можете заглянуть в лекции Тискина. Я их, конечно же, перерисовывать не буду.
+\end{remark}
+
+\subsection{Задачи и алгоритмы решения.}
+
+\begin{prob}
+    Умножение полиномов. Пусть у нас есть два полинома с комплексными коэффициентами. Нас интересует их произведение. Тупейший алгоритм сделает это за время $O(n^2)$. 
+\end{prob}
+
+\begin{alg}
+    \textbf{Алгоритм Карацубы.} Поделим многочлены $a$ и $b$ (сделаем их одинаковой длины) на две равные части (по $m$), и запишем $a(x)=a'(x)+a''(x)x^m$, аналогично с $b(x)$. Тогда $c(x)=$
+    \[
+        = a'b'+((a'+a'')(b'+b'')-a'b'-a''b'')x^m+a''b''x^n. 
+    \]
+    Таким образом, вместо 4 умножений полиномов с $m$ членами получилось 3. Трудоёмкость процесса получилась $O(n^{\log_2 3})$.  
+\end{alg}
+
+\begin{prob}
+    Быстрая интерполяция.
+\end{prob}
+
+\begin{alg}
+    Вот если мы посмотрим на ту красивую матрицу $F$, то заметим, что применив обратное преобразование Фурье к столбцу из значений в корнях из единицы, то как раз получим то, что нужно. В этом нетрудно убедится, провернув преобразования не в эту обратную, а в прямую сторону. Трудоёмкость: $O(n\log n)$. 
+\end{alg}
+
+\begin{defn}
+    \textit{Свёртка} (линейная) $a$ и $b$ - двух последовательностей длины $n$ - $c=a*b$, что находится по формуле $c_i=\sum_{0\leq j\leq i <2n} a_j'b_{i-j}'$, где $a'$ и $b'$ - дополнения изначальных до длины $2n$. Есть ещё циклическая и косоциклическая свёртки, но они противные.
+\end{defn}
+
+\begin{alg}
+    Суть - то же умножение полиномов. $c=\frac{1}{n} F_{2n, \omega^{-1}}((F_{2n, \omega}a')\circ (F_{2n, \omega}b'))$.
+\end{alg}
+
+\begin{remark}
+    Немного про количество битов, необходимых для операций прямого и обратного $DFT$ в $\ZZ_n$:
+
+    \begin{itemize}
+        \item сумма двух значений: в результате $(\frac{nr}{2}+1)+1=\frac{nr}{2}+2$ бит;
+        \item умножение на поворотный множитель $\omega^q=2^{qr}$, $0\leq q< n$: сдвиг на $qr<nr$ бит: в результате - не более $(\frac{nr}{2}+1)+nr-1=\frac{3nr}{2}$ бит; 
+        \item приведение значений с записью из $\frac{3nr}{2}=O(nr)$ бит.
+    \end{itemize}
+
+    Трудоёкость каждой операции над значениями: $O(nr)$ битовых операций. Что касается трудоёмкости всего DFT$_n$ в $\ZZ_N$: на вход/выход - $n\cdot O(nr)=O(n^2r)$ бит, и $O(n \log n)$ сложений и умножений на поворотные множители, итого $O(n^2r \log n)$ битовых операций.
+\end{remark}
+
+\begin{prob}
+    Эффективное умножение многозначных чисел.
+\end{prob}
+
+\begin{alg}
+    \textbf{Алгоритм Карацубы.} Как и умножение многочленов, просто сделаем из чисел многочлены поразрядно. В качестве значения на лекции рассматривалась двойка.
+\end{alg} \
+
+\begin{alg}
+    \textbf{Алгоритм Шенхаге-Штрассена.} Основная мысль состоит в том, что мы разбиваем $a$ и $b$ на разряды правильно выбранной длины $l$ и рассматриваем каждый разряд как коэффициент полинома, всего $n/l$ коэффициентов в каждом полиноме. Используем быстрое преобразование Фурье для их умножения. Попарное умножение значений полиномов выполняется рекурсивно, затем учитываются переносы. Сам алгоритм, ну там пиздец намешали и КТО, и косоциклическую свёртку, и Карацубу. В сухом итоге, трудоёмкость - $O(n\log n \log \log n)$.
+\end{alg}
 
 \end{document}
